--- a/index.html
+++ b/index.html
@@ -12,22 +12,22 @@
     <script type="text/javascript" src="//www.iplaystone.com/static/common/js/custom/??/getter.js,common.js,header.js,footer.js"></script>
   </head>
   <body>
-    <!-- <div id="stone_header"></div> -->
+    <div id="stone_header"></div>
     <div id="app"></div>
-    <!-- <div id="stone_footer"></div> -->
+    <div id="stone_footer"></div>
     <script>
-    // var userAgent = navigator.userAgent
-    // var isStone = false
-    // var requestSource = ''
-    // if(userAgent.search(/Stone/) == -1){//pc
-    //     isStone = false
-    //     stoneHeader.init(2)
-    //     requestSource = 'iplaystone'
-    // }else{//stone
-    //     isStone = true
-    //     requestSource = 'stoneBrowser'
-    //     $("#stone_header,#stone_footer").remove()
-    // }
+    var userAgent = navigator.userAgent
+    var isStone = false
+    var requestSource = ''
+    if(userAgent.search(/Stone/) == -1){//pc
+        isStone = false
+        stoneHeader.init(2)
+        requestSource = 'iplaystone'
+    }else{//stone
+        isStone = true
+        requestSource = 'stoneBrowser'
+        $("#stone_header,#stone_footer").remove()
+    }
     </script>
   </body>
 </html>
